Copyright (c) 2002-2006 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Under development

    Bugs fixed

      - A lot more places where i18n interpolation wasn't taking place
        anymore (${foo} in message texts) are fixed.

  1.5b1

    Features added

      - Changed over Silva so it works with Zope 2.8/Five/Zope 3
        interfaces instead of old-style interfaces. See
        doc/developer_changes for more details. These interfaces were
        in SilvaLayout as marker interfaces in the past.
      
      - Adjusted test infrastructure so it works with Five.

      - Use Zope 2.8 style transactions.

      - Changed over Silva so it works with the Five/Zope 3 translation
        architecture, using Five. See doc/developer_changes for more
        details.

      - Some parts of the Silva UI (for instance the lookup window in the
        edit views) are now based on Zope 3 adapters and views, using Five.
        This is a first step of a long evolutionary transition for the Silva
        UI.

      - Converted IViewerSecurity, IIndexable, IHaunted, IAssetData to
        Zope 3 adapters.

      - The silva-extra metadata set now has a language field that stores
        a ISO 639 two letter language code.

      - Language setting in the user preferences is now shown as human
        readable text, not as a language code. Moreover, using Zope 3's
        locale database, names for languages are shown in the configured
        language.

      - Added support for Kupu 1.3.4.

    Bugs fixed

      - Added missing 'is_default' method on SilvaObject, it was already
        available on Content but some new functionality (closing objects
        from tab_edit of Container types) made that it was required for
        other types as well.

      - Never really an official feature, the FileSystemSite-based layout
        system has been removed from the code. This means that
        service_layouts is now gone.
